# SES.local

./: Cargo.toml
SES.local/: Cargo.toml  build.rs  package-lock.json  package.json
SES.local/src/: app.rs  conf.rs  index.js  tailwind.css
SES.local/src/email_store/: email_store.rs  mod.rs  received_email.rs
SES.local/src/email_store/received_email/: mod.rs
SES.local/src/email_store/received_email/email_wrappers/: mod.rs  raw_email.rs  simple_email.rs  template_email.rs  unknown_email.rs
SES.local/src/event_store/: event_store.rs  mod.rs
SES.local/src/event_store/event/: mod.rs
SES.local/src/event_store/event/send_email/: mod.rs
SES.local/src/event_store/event/send_email/email_wrappers/: mod.rs  simple_email.rs  template_email.rs
SES.local/src/page_template/: mod.rs  page_template.rs
SES.local/src/routes/: mod.rs
SES.local/src/routes/aws_ses/: mod.rs
SES.local/src/routes/aws_ses/v2/: events.rs  mod.rs
SES.local/src/routes/aws_ses/v2/email/: mod.rs
SES.local/src/routes/aws_ses/v2/email/outbound_emails/: mod.rs  outbound_emails.rs
SES.local/src/routes/local/: mod.rs
SES.local/src/routes/local/emails/: mod.rs
SES.local/src/routes/local/emails/api/: mod.rs
SES.local/src/routes/local/emails/html/: mod.rs
SES.local/src/routes/local/emails/html/templates/: email.rs  email_row.rs  emails.rs  mod.rs  static_content.rs  tag.rs
SES.local/src/routes/local/events/: mod.rs
SES.local/src/routes/local/events/api/: mod.rs
SES.local/src/routes/local/events/html/: mod.rs
SES.local/src/routes/local/events/html/templates/: event.rs  event_row.rs  (+3 more)
(+31 files in other folders)
