[package]
name = "cecil"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "app"
path = "src/app.rs"

[dependencies]
aws-sdk-sesv2 = "1.75.0"
axum = { version = "0.8.4", features = ["macros"] }
config = "0.15.11"
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "std"] }
