[package]
name = "SES_local"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[[bin]]
name = "app"
path = "src/app.rs"

[dependencies]
aws-sdk-sesv2 = "1.75.0"
ses-serde = { version = "0.1.0", path = "../serde/ses" }
axum = { version = "0.8.4", features = ["macros"] }
config = "0.15.11"
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread", "sync"] }
tower-http = { version = "0.6.2", features = ["full", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "std"] }
uuid = { version = "1.16.0", features = ["v4"] }
thiserror = "2.0.12"
async-stream = "0.3.6"
futures = "0.3.31"
strum = "0.27.1"
strum_macros = "0.27.1"
maud = "0.27.0"
axum-htmx = { version = "0.7.0", features = ["auto-vary"] }
